--- a/style.css
+++ b/style.css
@@ -1,24 +1,31 @@
-/* *{
-  font-size: 16px;
-} */
-body {
-  background-color: beige;
+/*
+*, body, other tags
+*/
+body{
+  font-size: 14px;
+  font-family: sans-serif;
+  color: blue;
 }
-.center {
+a{
+  color: inherit;
+}
+.main-article{
+  font-size: 1.5em;
+  border: 2px dotted pink;
   text-align: center;
+  color:firebrick;
 }
-.alert-color {
-  color: red;
+.main-article-heading{
+  font-family: initial;
+  border: inherit;
 }
-.wavy-decorate {
-  text-decoration: underline wavy darkmagenta 3px;
-  /* text-decoration-line: line-through;
-    text-decoration-style: wavy;
-    text-decoration-color: red;
-    text-decoration-thickness: 1px; */
+.main-article-content{
+  line-height: 1.2;
 }
-.article-heading {
-  color: rgb(210, 105, 30);
-  text-align: center;
-  text-transform: capitalize;
+.main-article-blockquote{
+  border:inherit;
+  /* color: initial; */
+}
+.initial-align{
+  text-align: initial;
 }
