Add example block element

--- a/style.css
+++ b/style.css
@@ -1,31 +1,72 @@
 /*
 *, body, other tags
 */
-body{
-  font-size: 14px;
-  font-family: sans-serif;
-  color: blue;
+* {
+  box-sizing: border-box;
 }
-a{
+body {
+  color: blue;
+  font-size: 14px;
+  font-family: serif;
+}
+a {
   color: inherit;
 }
-.main-article{
-  font-size: 1.5em;
+.main-article {
+  width: 80%;
+  padding: 10px;
+
   border: 2px dotted pink;
+  border-radius: 15px;
+
+  margin: auto;
+
+  color: firebrick;
+
   text-align: center;
-  color:firebrick;
+
+  font-size: 1.5em;
+  font-style: italic;
 }
-.main-article-heading{
-  font-family: initial;
+.main-article-heading {
+  width: 50%;
+  padding: 0.7em 10%;
+  margin: auto;
+
   border: inherit;
+  border-radius: inherit;
+
+  background-color: aqua;
+
+  font-family: initial;
 }
-.main-article-content{
+.first-letter {
+  font-size: 2em;
+  text-transform: uppercase;
+}
+.main-article-content {
   line-height: 1.2;
 }
-.main-article-blockquote{
-  border:inherit;
+.main-article-pic {
+  /*block-model*/
+  width: 200px;
+  height: 200px;
+  padding: 10px;
+  border: 5px double blue;
+  border-radius: 50%;
+  margin: 20px;
+  /*background*/
+  background-color: wheat;
+  /*object-**/
+  object-fit: cover;
+  object-position: left;
+}
+.main-article-blockquote {
+  padding: inherit; /*  padding: 10px;*/
+  border: inherit;
+  border-radius: inherit;
   /* color: initial; */
 }
-.initial-align{
+.initial-align {
   text-align: initial;
 }
