--- a/style.css
+++ b/style.css
@@ -1,88 +1,22 @@
-/*
-*, body, other tags
-*/
-* {
+*{
   box-sizing: border-box;
+  margin: 0;
 }
-body {
-  color: blue;
-  font-size: 14px;
-  font-family: serif;
-}
-a {
-  color: inherit;
-}
-/* div{
-  display: inline-block;
-  background-color: darkcyan;
+/* html,
+body{
+  height: 100%;
+  margin: 0;
 } */
-strong,
-em,
-div{
-  display: inline-block;
-  padding: 0.5em 1.5em;
-  margin: 1.5em;
-  background-color: aquamarine;
-  border: inherit;
-  border-color: blue;
-  border-bottom-width: 5px;
-  /* line-height: 13; */
+
+.parent{
+  width: 100%;
+  height: 100vh;
+  background-color: yellow;
 }
-.main-article {
-  width: 80%;
-  padding: 10px;
 
-  border: 2px dotted pink;
-  border-radius: 15px;
-
-  margin: auto;
-
-  color: firebrick;
-
-  text-align: center;
-
-  font-size: 1.5em;
-  /* font-style: italic; */
-}
-.main-article-heading {
-  width: 50%;
-  padding: 0.7em 10%;
-  margin: auto;
-
-  border: inherit;
-  border-radius: inherit;
-
-  background-color: aqua;
-
-  font-family: initial;
-}
-.first-letter {
-  font-size: 2em;
-  text-transform: uppercase;
-}
-.main-article-content {
-  line-height: 1.2;
-}
-.main-article-pic {
-  /*block-model*/
-  width: 200px;
-  height: 200px;
-  padding: 10px;
-  border: 5px double blue;
-  border-radius: 50%;
-  margin: 20px;
-  /*background*/
-  background-color: wheat;
-  /*object-**/
-  object-fit: cover;
-  object-position: left;
-}
-.main-article-blockquote {
-  padding: inherit; /*  padding: 10px;*/
-  border: inherit;
-  border-radius: inherit;
-  /* color: initial; */
-}
-.initial-align {
-  text-align: initial;
+.child{
+  width: 100vmin;
+  height:  100vmin;
+  /* padding: 10%; */
+  background-color: pink;
 }
