--- a/style.css
+++ b/style.css
@@ -1,69 +1,43 @@
-* {
-  box-sizing: border-box;
+img {
+  width: 100%;
 }
 
+html,
 body {
-  /* height: 300vh; */
-  margin: 0;
+  scroll-behavior: smooth;
 }
 
-.wrapper {
-  width: 80%;
-  height: 80%;
-  margin: auto;
-  background-color: yellow;
-  position: relative;
-}
-
-.child{
-  width: 80px;
-  height: 80px;
-  border: 1px solid #000;
-  background-color: aqua;
-}
-
-.parent {
-  width: 80%;
-  height: 50%;
+.up {
+  display: block;
+  /* width: 50px;
+ height: 50px; */
+  padding: 20px;
   background-color: pink;
-  position: relative;
-  top: 100px;
-}
-
-.absolute{
-  /* width: 50%;
-  height: 120%; */
-  width: 80px;
-  height: 80px;
-  background-color: fuchsia;
-  
-  position: absolute;
-
-  bottom: -10px;
-  right: 0; 
-  left: 30%;
-  top: -30px; 
-}
-
-
-
-.static{
-  position: static;
-}
-
-.relative{
-  position: relative;
-  /* bottom: -20px; */
-  top: 10px;
-  left: 100%; 
-  z-index: 10;
-}
-
-.fixed{
-  border-radius: 50%;
-  text-align: center;
   position: fixed;
-  top: 10px;
-  left: 10px;
-  z-index: 999;
+  bottom: 10px;
+  right: 10px;
 }
+
+.figure {
+  position: relative;
+}
+
+.figure-title {
+  box-sizing: border-box;
+
+  width: 100%;
+  /* height: 100%; */
+  padding: 10px;
+  /* margin: 20px; */
+
+  background-color: rgba(245, 222, 179, 1);
+
+  text-align: center;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+/* .figure:hover .figure-title{
+  height: auto;
+} */
