--- a/style.css
+++ b/style.css
@@ -1,43 +1,21 @@
-img {
-  width: 100%;
+p{
+  color: blue;
+  font-size: 2em;
 }
 
-html,
-body {
-  scroll-behavior: smooth;
+p::first-letter{
+  background-color: aqua;
+  color: red;
+  font-size: 3em;
 }
 
-.up {
-  display: block;
-  /* width: 50px;
- height: 50px; */
-  padding: 20px;
-  background-color: pink;
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
+p::first-line{
+  background-color: yellow;
+  text-shadow: 11px 0px 3px rgba(0,0,0,0.6);
 }
 
-.figure {
-  position: relative;
+p::selection{
+  color: pink;
+  background-color: red;
+  text-shadow: 0px 11px 3px rgba(0,0,0,0.6);
 }
-
-.figure-title {
-  box-sizing: border-box;
-
-  width: 100%;
-  /* height: 100%; */
-  padding: 10px;
-  /* margin: 20px; */
-
-  background-color: rgba(245, 222, 179, 1);
-
-  text-align: center;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-/* .figure:hover .figure-title{
-  height: auto;
-} */
