--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 }
 
 .container{
-  height: 60vh;
   border: 2px solid #aaa;
   background-color: #eee;
 }
@@ -18,11 +17,16 @@
 }
 
 .flex-parent{
+  height: 60vh;
   display: flex;
-  flex-direction: row;
-  /* justify-content: space-between;  */
+  /* flex-direction: column;
+  flex-wrap: wrap; */
+  flex-flow: row-reverse wrap;
   /*main axis*/
-  align-items: stretch; /*cross axis*/
+  justify-content: space-between; 
+  /*cross axis*/
+  align-items: flex-end; 
+  align-content: space-evenly;
 }
 
 .margin-right-auto{
