--- a/style.css
+++ b/style.css
@@ -1,102 +1,44 @@
-:root{
-  /* variables */
-  font-family: sans-serif;
+:root {
+  font-family: serif;
   font-size: 14px;
 }
-*{
+* {
   box-sizing: border-box;
 }
-body{
-  margin: 0;
-  background-color: rgb(106, 136, 196);
-}
-a{
-  color: inherit;
-}
 
-.form-section {
-  min-width: 350px;
-  width: 100%;
-  max-width: 500px;
-  margin: 20px auto;
+.inner {
+  width: 50px;
+  height: 50px;
+  padding-top: 15px;
+  margin-bottom: 5px;
+  border-radius: 50%;
+  background-color: pink;
+  /* transform: scale(1); */
+  /* transform: rotate(0.5turn); */
+  /* transition: margin-left 2s .2s, color 1s .5s, transform 1.5s .3s, background-color 2s .2s; */
+  transition: transform 1s .2s;
   text-align: center;
 }
-.form-wrapper {
-  padding: 1.5rem 15%;
-  background-color: #eee;
-  color: #555;
+.wrapper:hover .inner {
+  /* transform: scale(-1); */
+  /* width: 100%; */
+  /* margin-left: 90%;
+  background-color: blue;
+  color: white;
+  transform: rotate(3turn); */
 }
-.form-title {
-  position: relative;
-
-  font-size: 2rem;
-  font-weight: normal;
+.ease {
+  transition-timing-function: ease;
 }
-.form-title>span{
-  display: inline-block;
-  width: 50%;
-  position: relative;
-  z-index: 2;
-  padding: 0 1rem;
-  background-color: #eee;
+.linear {
+  transition-timing-function: linear;
 }
-.form-title::after{
-  content:'';
-  display: block;
-  width: 100%;
-  border-top: 2px solid #ccc;
-  position: absolute;
-  top: 40%;
+.ease-in {
+  transition-timing-function: ease-in;
 }
-.oneline {
+.ease-out {
+  transition-timing-function: ease-out;
 }
-.form-description {
-}
-/* variant 1 flex*/
-/* .form-register {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 70%;
-  margin: auto;
-} */
-
-/* variant 1 without flex*/
-.form-register{
-  width: 100%;
-  margin: auto;
-}
-.form-register>*{
-  display: block;
-  width: 100%;
-  margin-bottom: 1rem;
-}
-.form-register input{
-  padding: 0.5rem;
-}
-.form-register input::placeholder{
-  text-transform: capitalize;
-}
-.fullname {
-  display: flex;
-  justify-content: space-between;
-}
-.fullname>input{
-  width: 48%;
-}
-.form-register>label{
-  text-align: left;
-}
-.form-register>label>input{
-  transform: translateY(2px);
-}
-.btn-submit {
-}
-.login-account {
-  color: #fff;
-}
-.oneline {
-  white-space: nowrap;
-  overflow: hidden; 
-  text-overflow: ellipsis; 
+.ease-in-out {
+  transition-timing-function: ease-in-out;
 }
