--- a/style.css
+++ b/style.css
@@ -14,22 +14,26 @@ a {
   color: inherit;
   text-decoration: none;
 }
+ul {
+  list-style: none;
+}
 nav,
 ul,
 li {
-  display: inline-block;
+  margin: 0;
+  padding: 0;
 }
 .wrapper {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
+
 .header {
   position: fixed;
   z-index: 999;
   width: 100%;
   height: var(--header-height);
-  padding-top: 10px;
   background-color: #fff;
   box-shadow: 0px 2px 5px #999;
 }
@@ -39,6 +43,11 @@ li {
   width: 100%;
   padding: 0 1em;
   margin: auto;
+}
+.vertical-align {
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 .logo {
   position: relative;
@@ -64,26 +73,95 @@ li {
   left: -3px;
   right: -3px;
 }
-
+.search,
+.search::after{
+  display: inline-block;
+  width: calc(var(--logo-size) * 0.8);
+  height: calc(var(--logo-size) * 0.8);
+  border-radius: 50%;
+}
 .search {
+  position: relative;
+  margin: 0 1rem;
+  background-image: url(./assets/icons/magnify.svg);
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-position: center;
+  cursor: pointer;
+}
+.search::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  transform: scale(0);
+}
+.search:hover::after {
+  background-color: #eee;
+  transform: scale(1);
+  animation: zoomIn;
+  animation-duration: 0.5s; 
 }
 .header-nav {
+  height: inherit;
+  flex: 1 0;
+}
+.header-nav *{
+  height: inherit;
 }
 .header-nav-list {
+  display: flex;
+  align-items: center;
 }
 .header-nav-item {
+  position: relative;
+}
+.header-nav-item:last-child {
+  margin-left: auto;
 }
 .header-nav-link {
+  display: inline-block;
+  border-bottom: 0px solid #999;
+  padding: 0 1rem;
+  line-height: var(--header-height);
+  transition: border-bottom-width 0.5s;
 }
+.header-nav-link:hover {
+  border-bottom-width: 3px;
+}
+
 .main {
   flex: 1 0 auto;
   padding-top: var(--header-height);
 }
 
+.btn-chat,
+.chat{
+  position: fixed;
+  z-index: 9999;
+  right: 20px;
+}
+
+.btn-chat {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: green;
+  bottom: 30px;
+}
+.chat {
+  bottom: -100vh;
+  padding: 2rem;
+  background-color: green;
+}
+.btn-chat:hover+.chat{
+  bottom: 85px;
+  animation: backInUp;
+  animation-duration: 0.5s; 
+}
+
 .footer {
   text-align: center;
 }
-
 
 .hero {
   width: 80px;
