Add example em & rem

--- a/style.css
+++ b/style.css
@@ -1,181 +1,21 @@
-:root {
-  --logo-size: 44px;
-  --header-height: calc(var(--logo-size) * 1.5);
-  font-family: sans-serif;
-  font-size: 16px;
+:root{
+  font-size: 14px;
 }
-* {
-  box-sizing: border-box;
-}
-body {
-  margin: 0;
-}
-a {
-  color: inherit;
-  text-decoration: none;
-}
-ul {
+
+ul{
   list-style: none;
-}
-nav,
-ul,
-li {
-  margin: 0;
   padding: 0;
-}
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-.header {
-  position: fixed;
-  z-index: 999;
-  width: 100%;
-  height: var(--header-height);
-  background-color: #fff;
-  box-shadow: 0px 2px 5px #999;
-}
-.general-size {
-  min-width: 520px;
-  max-width: 1264px;
-  width: 100%;
-  padding: 0 1em;
-  margin: auto;
-}
-.vertical-align {
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-.logo {
-  position: relative;
-  display: inline-block;
-  width: var(--logo-size);
-  height: var(--logo-size);
-  border-radius: 50%;
-  background-color: #000;
-  color: #fff;
   text-align: center;
-  font-size: calc(var(--logo-size) / 2);
-  line-height: var(--logo-size);
+  font-size: 0;
 }
-.logo::after {
-  content: '';
+li{
   display: inline-block;
-  border-radius: 50%;
-  background-image: linear-gradient(0, yellow 50%, blue 50%);
-  position: absolute;
-  z-index: -1;
-  top: -3px;
-  bottom: -3px;
-  left: -3px;
-  right: -3px;
+  background-color: pink;
+  font-size: 2rem; /*28 px*/
+  line-height: 1em;
 }
-.search,
-.search::after{
+a{
   display: inline-block;
-  width: calc(var(--logo-size) * 0.8);
-  height: calc(var(--logo-size) * 0.8);
-  border-radius: 50%;
-}
-.search {
-  position: relative;
-  margin: 0 1rem;
-  background-image: url(./assets/icons/magnify.svg);
-  background-repeat: no-repeat;
-  background-size: 70%;
-  background-position: center;
-  cursor: pointer;
-}
-.search::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  transform: scale(0);
-}
-.search:hover::after {
-  background-color: #eee;
-  transform: scale(1);
-  animation: zoomIn;
-  animation-duration: 0.5s; 
-}
-.header-nav {
-  height: inherit;
-  flex: 1 0;
-}
-.header-nav *{
-  height: inherit;
-}
-.header-nav-list {
-  display: flex;
-  align-items: center;
-}
-.header-nav-item {
-  position: relative;
-}
-.header-nav-item:last-child {
-  margin-left: auto;
-}
-.header-nav-link {
-  display: inline-block;
-  border-bottom: 0px solid #999;
-  padding: 0 1rem;
-  line-height: var(--header-height);
-  transition: border-bottom-width 0.5s;
-}
-.header-nav-link:hover {
-  border-bottom-width: 3px;
-}
-
-.main {
-  flex: 1 0 auto;
-  padding-top: var(--header-height);
-}
-
-.btn-chat,
-.chat{
-  position: fixed;
-  z-index: 9999;
-  right: 20px;
-}
-
-.btn-chat {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: green;
-  bottom: 30px;
-}
-.chat {
-  bottom: -100vh;
-  padding: 2rem;
-  background-color: green;
-}
-.btn-chat:hover+.chat{
-  bottom: 85px;
-  animation: backInUp;
-  animation-duration: 0.5s; 
-}
-
-.footer {
-  text-align: center;
-}
-
-.hero {
-  width: 80px;
-  height: 94px;
-  background-image: url(./assets/images/hero_spritesheet.png);
-  background-repeat: no-repeat;
-  background-position-y: -94px;
-  /* background-position-x: 0; */
-}
-.hero:hover {
-  animation: walk 1s steps(6) infinite;
-}
-@keyframes walk {
-  100% {
-    background-position-x: -480px;
-  }
+  padding-top: 1rem; /*14 px*/
+  padding-bottom: 1em; /*28 px*/
 }
