--- a/style.css
+++ b/style.css
@@ -1,21 +1,15 @@
+@charset 'UTF-8';
+/* @import url(./assets/css/reset.css); */
+/* @import './assets/css/reset.css'; */
+/* @import './assets/css/fonts.css'; */
+
 :root{
-  font-size: 14px;
+  font-size: 24px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-ul{
-  list-style: none;
-  padding: 0;
-  text-align: center;
-  font-size: 0;
-}
-li{
-  display: inline-block;
-  background-color: pink;
-  font-size: 2rem; /*28 px*/
-  line-height: 1em;
-}
-a{
-  display: inline-block;
-  padding-top: 1rem; /*14 px*/
-  padding-bottom: 1em; /*28 px*/
+h1{
+  font-family: "Playfair Display", serif;
+  font-weight: 900;
+  font-style: italic;
 }
